1,修改了由昆明市改为彝良县

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="expires" content="0">
-<title>昆明市公共卫生服务管理系统</title>
+<title>彝良县公共卫生服务管理系统</title>
 <script src="../js/angularjs/angular.min.js"></script>
 <script src="../js/angularjs/controllers/controllers.js"></script>
 <!-- 
@@ -412,7 +412,7 @@ table.x-date-inner {
 			</p>
 			<p
 				style="margin-top: 10px 0 0 2px; font-weight: bold; font-size: 14px; color: #44454a;">
-				昆明市公共卫生服务管理系统</p>
+				彝良县公共卫生服务管理系统</p>
 		</div>
 	</div>
 	<div class="rc_box1">
