1,更新了代码有530100改为530628

--- a/statisticByManageBirthCertifi.html
+++ b/statisticByManageBirthCertifi.html
@@ -24,7 +24,7 @@
 		<table id="statisticByDay" cellpadding="0" cellspacing="0" >
 			<thead>
 				<tr>
-					<td colspan="13"><h1 style="font-size: 20px;">昆明市助产保健机构《出生医学证明》管理使用情况年度统计表</h1></td>
+					<td colspan="13"><h1 style="font-size: 20px;">彝良县市助产保健机构《出生医学证明》管理使用情况年度统计表</h1></td>
 				</tr>
 				<tr>
 					<td colspan="11" style="text-align: right;">填表年度：</td>
