--- a/statisticByDay.html
+++ b/statisticByDay.html
@@ -33,7 +33,7 @@
 		<table id="statisticByDay" cellpadding="0" cellspacing="0" width="98%" >
 			<thead>
 				<tr>
-					<td colspan="17"><span>昆明市电子建档日报表</span></td>
+					<td colspan="17"><span>彝良县电子建档日报表</span></td>
 				</tr>
 				<tr>
 					<td rowspan="2" width="150px">卫生院名称</td>
