1,彝良与昆明同步

--- a/healthfileEnableBuild.html
+++ b/healthfileEnableBuild.html
@@ -19,13 +19,13 @@
 <script type="text/javascript" src="js/jquery.blockUI.js"></script>
 <script type="text/javascript" src="js/jquery.printElement.min.js"></script>
 <script type="text/javascript" src="js/rx.jQuery.js"></script>
-<script type="text/javascript" src="js/controls.js"></script>
+<script type="text/javascript" src="js/controls.js?v=20140925"></script>
 
-<script type="text/javascript" src="js/med.js?v=2.0"></script>
+<script type="text/javascript" src="js/med.js"></script>
 <script type="text/javascript" src="js/validate.js"></script>
 <script type="text/javascript" src="js/showInfo.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/in_healthfileEnableBuild.js"></script>
+<script type="text/javascript" src="js/in_healthfileEnableBuild.js?v=20140925"></script>
 <script type="text/javascript" src="js/pi_print.js"></script>
 <script language="javascript" src="js/LodopFuncs.js"></script>
 <object id="LODOP" classid="clsid:2105C259-1E0C-4534-8141-A753534CB4CA"
