--- a/personalInfo.html
+++ b/personalInfo.html
@@ -32,13 +32,13 @@
         <script type="text/javascript" src="js/jquery.blockUI.js"></script>
         <script type="text/javascript" src="js/jquery.printElement.min.js"></script>
         <script type="text/javascript" src="js/rx.jQuery.js"></script>
-        <script type="text/javascript" src="js/controls.js?v=3.0"></script>
+        <script type="text/javascript" src="js/controls.js?v=20140723"></script>
         <!-- <script type="text/javascript" src="js/ext/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="js/ext/ext-all-debug.js"></script> -->
         <script type="text/javascript" src="js/med.js?v=2.0"></script>
         <script type="text/javascript" src="js/validate.js"></script>
         <script type="text/javascript" src="js/app.js?v=3.0"></script>
-        <script type="text/javascript" src="js/personalInfo.js?v=2014062403"></script>
+        <script type="text/javascript" src="js/personalInfo.js?v=20131219"></script>
         <script type="text/javascript" src="js/pi_print.js"></script>
         <!-- Framework CSS -->
         <link rel="stylesheet" href="css/screen.css" type="text/css"
